[metadata]
name = remora
summary = Remora is command-line tool and library to manage container orchestration engines on OpenStack cloud.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    remora

[entry_points]

openstack.coe.v1 =
    coe_cluster_create = remora.cli.v1.cluster:CreateCluster

openstack.cli.extension =
    coe = remora.cli.plugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = remora/locale
domain = remora

[update_catalog]
domain = remora
output_dir = remora/locale
input_file = remora/locale/remora.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = remora/locale/remora.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
