[metadata]
name = remora
summary = Remora is command-line tool and library to manage container orchestration engines on OpenStack cloud.
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    remora

[entry_points]

remora_certs_renderers =
    etcd = remora.renderer.certs.etcd:EtcdCertsRenderer
    kubernetes = remora.renderer.certs.kubernetes:KubernetesCertsRenderer

remora_kubelet_renderers =

remora_etcd_renderers =

remora_bootstrap_renderers =

remora_k8s_manifests_renderers =
    kube_apiserver = remora.renderer.manifests.apiserver:KubeApiServerRenderer
    kube_controller_manager = remora.renderer.manifests.controller_manager:KubeControllerManagerRenderer
    kube_scheduler = remora.renderer.manifests.scheduler:KubeSchedulerRenderer
    kube_proxy = remora.renderer.manifests.proxy:KubeProxyRenderer
    pod_checkpointer = remora.renderer.manifests.checkpointer:PodCheckpointerRenderer
    keepalived = remora.renderer.manifests.keepalived:KeepalivedRenderer

remora_cni_manifests_rederers =
    flannel = remora.renderer.cni.flannel:FlannelRenderer

remora_addons_manifest_renderers =
    kube_dns = remora.renderer.addons.kubedns:KubeDNSRenderer
    core_dns = remora.renderer.addons.coredns:CoreDNSRenderer

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = remora/locale
domain = remora

[update_catalog]
domain = remora
output_dir = remora/locale
input_file = remora/locale/remora.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = remora/locale/remora.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
